--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="p-4 md:p-8">
+    
+    <div style="text-align:center; margin-bottom: 2rem;">
+  <img src="banner.png" alt="MARX - LENIN - MARIÁTEGUI" style="max-width:100%; height:auto; border-radius: 0.5rem; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+</div>
 
     <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">Curso Interactivo: Marxismo-Leninismo-Mariateguismo</h1>
 
